# command-line-interface

./: .gitignore  MANIFEST.in  README.md  README.rst  __init__.py  pyproject.toml  setup.py
.github/workflows/: pypi.yml
docs/: README.md  audit_events.md  authentication.md  blobs.md  buckets.md  complete.md  config.md  deployment_versions.md  deployments.md  environment_builds.md  environment_revisions.md  environment_variables.md  environments.md  exports.md  files.md  imports.md  instance_type_groups.md  instance_types.md  instances.md  logs.md  model_versions.md  models.md  pipeline_versions.md  pipelines.md  project_instances.md  projects.md  run_local.md  schedules.md  validate.md  version_builds.md  version_revisions.md
examples/: example_deployment.yaml  example_deployment_version.yaml  example_pipeline.yaml  quickstart-simple-CLI.ipynb
examples/deployment_package/: deployment.py
pkg/: constants.py  main.py  utils.py
pkg/ignore/: LICENSE
pkg/src/: auth.py  blobs.py  config.py  deployment_builds.py  deployment_revisions.py  deployment_versions.py  deployments.py  environment_variables.py  logs.py  model_versions.py  models.py  pipeline_versions.py  pipelines.py  projects.py  request_schedules.py  scheduled_requests.py
pkg/src/helpers/: click_helpers.py  deployment_helpers.py  formatting.py  helpers.py  options.py  pipeline_helpers.py  requests.py
ubiops_cli/: constants.py  exceptions.py  main.py  utils.py
ubiops_cli/complete/: ubiops-complete.bash  ubiops-complete.fish  ubiops-complete.zsh
ubiops_cli/gitignorefile/gitignorefile/: __init__.py
ubiops_cli/ignore/: ignore.py  utils.py
ubiops_cli/src/: auth.py  blobs.py  buckets.py  completions.py  config.py  deployment_builds.py  deployment_revisions.py  deployment_versions.py  deployments.py  environment_builds.py  environment_revisions.py  environment_variables.py  environments.py  exports.py  files.py  imports.py  instance_type_groups.py  instance_types.py  instances.py  logs.py  pipeline_versions.py  pipelines.py  project_instances.py  projects.py  request_schedules.py  run_local.py  validation.py
ubiops_cli/src/helpers/: bucket_helpers.py  click_helpers.py  deployment_helpers.py  environment_helpers.py  formatting.py  helpers.py  instance_helpers.py  instance_type_group_helpers.py  (+4 more)
